[project]
name = "nartool"
version = "0.0.1"
description = "Simple tool to handle Nix NAR caches"

authors = [
  { name="Markus Kowalewski", email="markus.kowalewski@gmail.com" },
]

readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL3",
    "Operating System :: Unix",
]

dependencies = [
  "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
nartool = "nartool:main"
